toggle between windows

--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,10 @@
 </head>
 <body>
   <div class="message">
-    <h1 id="title"></h1>
-    <div id="details"></div>
-    <small id="versions"></small>
+    <h1 id="title"></h1><br/>
+    <audio autoplay></audio><br/>
+    <select id="windows"></select><br/>
+    <button id="stream">Start Streaming</button>
   </div>
-  <audio autoplay></audio>
-  <select id="picture" class="image-picker show-html">
-  </select>
-  <button id="stream">Start Streaming</button>
 </body>
 </html>
